# vl-jepa-vqa

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  vqav2.yaml
scripts/: evaluate.py  train.py
src/: utils.py
src/evaluation/: metrics.py
src/models/: vqa_model.py
src/models/encoders/: __init__.py  base_encoder.py  clip_encoder.py  vl_jepa_encoder.py
src/training/: trainer.py
tests/: test_encoders.py  test_metrics.py  test_vqa_model.py
